@@ -1,3 +1,11 @@
+2008-01-13  Wakaba  <wakaba@suika.fam.cx>
+
+	* Window.pm: New Perl module.
+
+	* Document.pm (default_view): Implemented.
+
+	* Element.pm (current_style): Implemented.
+
 2008-01-06  Wakaba  <wakaba@suika.fam.cx>
 
 	* CSSStyleDeclaration.pm (css_text): Allow to shorten a complete
